<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="ExtraTranslation">
    <string name="app_name">Budget Coders</string>
    <string name="Budget_Coders">Budget Coders</string>
    <string name="button_SendHome">Getting Started</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="username_input">Enter Username</string>
    <string name="password_input">Enter Password</string>
    <string name="noAccount">Don\'t Have an Account?</string>
    <string name="account_create">Create One!</string>
    <string name="first_and_last">First and Last Name:</string>
    <string name="email">Email:</string>
    <string name="confrim_password">Confirm Password:</string>
    <string name="create_accnt">Create Account</string>
    <string name="logo">Logo</string>
    <string name="goal_name">Goal name</string>
    <string name="enter_goal">Enter the name of your goal</string>
    <string name="enter_balance_goal">Enter the balance goal</string>
    <string name="goal_balance">Goal balance</string>
    <string name="create_goal">Create goal!</string>
    <string name="to_menu">Login</string>
    <string name="saved_until_now">Saved Until Now:</string>
    <string name="vacation_fund">Vacation Fund</string>
    <string name="savings">Savings</string>
    <string name="christmas_fund">Christmas Fund</string>
    <string name="next_goal">Next Goal:</string>
    <string name="edit">Edit</string>
    <string name="snack_bar">Passwords do not match!</string>
    <string name="snack_bar_dismiss">dismiss</string>
</resources>
