<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_Screen">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="161dp"
        android:layout_height="47dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="87dp"
        android:hint="@string/goal_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/goal_name" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="128dp"
        android:layout_height="43dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="16dp"
        android:hint="@string/goal_balance"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalname"
        tools:text="@string/goal_balance" />

    <EditText
        android:id="@+id/goalname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:ems="11"
        android:hint="@string/enter_goal"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/balancegoal"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginStart="72dp"
        android:layout_marginLeft="72dp"
        android:ems="10"
        android:hint="@string/enter_balance_goal"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />


    <Button
        android:id="@+id/creategoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="145dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="151dp"
        app:layout_constraintBottom_toTopOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/balancegoal"
        tools:text="@string/create_goal" />



</android.support.constraint.ConstraintLayout>